[package]
name = "advent-of-code2020"
version = "0.1.0"
authors = ["Aidan Goldthorpe <aidan.goldthorpe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
reformation = "0.*"
regex = "1"
petgraph = "0.5.1"